<?xml version="1.0"?>
<package>
  <name>jaco_control</name>
  <version>0.0.0</version>
  <description>The jaco_control package</description>
  <maintainer email="js-web@outlook.com">josh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>vrep_api</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>vrep_api</run_depend>

  <export>
  </export>
</package>
